Fixed tooltip zIndex issue. Fixed verticaltabs horizontal scroll issue.

--- a/src/css/vertical_tabs.scss
+++ b/src/css/vertical_tabs.scss
@@ -25,7 +25,7 @@
     flex-direction: row;
     margin: 0 0 0 -1px;
     border: 0;
-    overflow-x: scroll;
+    overflow-x: auto;
   }
 }
 
